@@ -1,3 +1,9 @@
+2001-12-06 Stefan Petersen (spe@stacken.kth.se)
+
+	* src/drill.c, src/gerb_image.c, src/gerber.c, src/gerbv.c:
+	  Exchanged bzero with memset for further portability.
+	
+
 2001-12-06 Andreas Andersson (e92_aan@e.kth.se)
 
 	* src/drill.[hc]:
